--- a/PopcornApp/app/build.gradle
+++ b/PopcornApp/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.mis478.popcornapp"
         minSdkVersion 10
         targetSdkVersion 21
-        versionCode 1
-        versionName "1.0"
+        //versionCode 2
+        //versionName "0.0.1"
     }
     buildTypes {
         release {
