--- a/PopcornApp/app/src/main/AndroidManifest.xml
+++ b/PopcornApp/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mis478.popcornapp"
-    android:versionCode="1"
-    android:versionName="0.0.1">
+    android:versionCode="3"
+    android:versionName="0.0.2">
 
     <application
         android:allowBackup="true"
@@ -55,5 +55,7 @@
                 android:value="com.mis478.popcornapp.DisplayMessageActivity" />
         </activity>
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
