Minor Update w/ Lloyd
Added a few parts of code so Lloyd can get to his screens.

--- a/PopcornApp/app/src/main/AndroidManifest.xml
+++ b/PopcornApp/app/src/main/AndroidManifest.xml
@@ -54,6 +54,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.mis478.popcornapp.DisplayMessageActivity" />
         </activity>
+        <activity
+            android:name=".DenLeaderMain"
+            android:label="@string/title_activity_DenLeaderMain"
+            android:parentActivityName=".DisplayMessageActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.mis478.popcornapp.DisplayMessageActivity" />
+        </activity>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
