--- a/PopcornApp/app/src/main/AndroidManifest.xml
+++ b/PopcornApp/app/src/main/AndroidManifest.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mis478.popcornapp"
-    android:versionCode="6"
-    android:versionName="0.1.2" >
+    android:versionCode="7"
+    android:versionName="0.1.3" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/appicon"
         android:label="@string/app_name"
         android:theme="@style/CustomActionBarTheme" >
         <activity
