--- a/PopcornApp/app/src/main/AndroidManifest.xml
+++ b/PopcornApp/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:theme="@style/CustomActionBarTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".Login"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,64 +21,61 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DisplayMessageActivity"
-            android:label="@string/title_activity_display_message" >
-        </activity>
-        <activity
             android:name=".CustomerInfo"
+
             android:label="@string/title_activity_customer_info"
-            android:parentActivityName=".DisplayMessageActivity" >
+            android:parentActivityName=".Login" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mis478.popcornapp.DisplayMessageActivity" />
+                android:value=".Login" />
         </activity>
         <activity
             android:name=".ScoutGoal"
             android:label="@string/title_activity_scout_goal"
-            android:parentActivityName=".DisplayMessageActivity" >
+            android:parentActivityName=".Login" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mis478.popcornapp.DisplayMessageActivity" />
+                android:value=".Login" />
         </activity>
         <activity
             android:name=".DeliveryMode"
             android:label="@string/title_activity_delivery_mode"
-            android:parentActivityName=".DisplayMessageActivity" >
+            android:parentActivityName=".Login" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mis478.popcornapp.DisplayMessageActivity" />
+                android:value=".Login" />
         </activity>
         <activity
             android:name=".PastSales"
             android:label="@string/title_activity_past_sales"
-            android:parentActivityName=".DisplayMessageActivity" >
+            android:parentActivityName=".Login" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mis478.popcornapp.DisplayMessageActivity" />
+                android:value=".Login" />
         </activity>
         <activity
             android:name=".DenLeaderMain"
             android:label="@string/title_activity_DenLeaderMain"
-            android:parentActivityName=".DisplayMessageActivity" >
+            android:parentActivityName=".Login" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mis478.popcornapp.DisplayMessageActivity" />
+                android:value=".Login" />
         </activity>
         <activity
             android:name=".DenSalesTracking"
             android:label="@string/title_activity_den_sales_tracking"
-            android:parentActivityName=".DisplayMessageActivity" >
+            android:parentActivityName=".Login" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mis478.popcornapp.DisplayMessageActivity" />
+                android:value=".Login" />
         </activity>
         <activity
             android:name=".ViewScouts"
             android:label="@string/title_activity_view_scouts"
-            android:parentActivityName=".DisplayMessageActivity" >
+            android:parentActivityName=".Login" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mis478.popcornapp.DisplayMessageActivity" />
+                android:value=".Login" />
         </activity>
         <activity
             android:name=".ScoutStatusPage"
@@ -103,22 +100,14 @@
         <activity
             android:name=".Donation"
             android:label="@string/title_activity_donation"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName=".Login" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mis478.popcornapp.MainActivity" />
+                android:value=".Login" />
         </activity>
         <activity
             android:name=".OrderFinalization"
             android:label="@string/title_activity_order_finalization" >
-        </activity>
-        <activity
-            android:name=".ViewProducts"
-            android:label="@string/title_activity_view_products"
-            android:parentActivityName=".MainActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mis478.popcornapp.MainActivity" />
         </activity>
     </application>
 
