--- a/PopcornApp/app/src/main/AndroidManifest.xml
+++ b/PopcornApp/app/src/main/AndroidManifest.xml
@@ -22,155 +22,71 @@
         </activity>
         <activity
             android:name=".CustomerInfo"
-            android:label="@string/title_activity_customer_info"
-            android:parentActivityName=".SalesMode" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".SalesMode" />
+            android:label="@string/title_activity_customer_info">
         </activity>
         <activity
             android:name=".ScoutGoal"
-            android:label="@string/title_activity_scout_goal"
-            android:parentActivityName=".ScoutMainPage" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ScoutMainPage" />
+            android:label="@string/title_activity_scout_goal">
         </activity>
         <activity
             android:name=".DeliveryMode"
-            android:label="@string/title_activity_delivery_mode"
-            android:parentActivityName=".ScoutMainPage" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ScoutMainPage" />
+            android:label="@string/title_activity_delivery_mode">
         </activity>
         <activity
             android:name=".PastSales"
-            android:label="@string/title_activity_past_sales"
-            android:parentActivityName=".ScoutMainPage" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ScoutMainPage" />
+            android:label="@string/title_activity_past_sales">
         </activity>
         <activity
             android:name=".DenLeaderMain"
-            android:label="@string/title_activity_DenLeaderMain"
-            android:parentActivityName=".Login" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Login" />
+            android:label="@string/title_activity_DenLeaderMain">
         </activity>
         <activity
             android:name=".DenSalesTracking"
-            android:label="@string/title_activity_den_sales_tracking"
-            android:parentActivityName=".DenLeaderMain" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".DenLeaderMain" />
+            android:label="@string/title_activity_den_sales_tracking">
         </activity>
         <activity
             android:name=".ViewScouts"
-            android:label="@string/title_activity_view_scouts"
-            android:parentActivityName=".DenLeaderMain" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".DenLeaderMain" />
+            android:label="@string/title_activity_view_scouts">
         </activity>
         <activity
             android:name=".ScoutStatusPage"
-            android:label="@string/title_activity_scout_status_page"
-            android:parentActivityName=".Login" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Login" />
+            android:label="@string/title_activity_scout_status_page">
         </activity>
         <activity
             android:name=".ScoutMainPage"
-            android:label="@string/title_activity_scout_main_page"
-            android:parentActivityName=".Login" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Login" />
-        </activity>
-        <activity
-            android:name=".SalesMode"
-            android:label="@string/title_activity_sales_mode"
-            android:parentActivityName=".ScoutMainPage" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ScoutMainPage" />
+            android:label="@string/title_activity_scout_main_page">
         </activity>
         <activity
             android:name=".DeliveryCustomerInfo"
-            android:label="@string/title_activity_delivery_customer_info"
-            android:parentActivityName=".DeliveryMode" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mis478.popcornapp.DeliveryMode" />
+            android:label="@string/title_activity_delivery_customer_info">
         </activity>
         <activity
             android:name=".Donation"
-            android:label="@string/title_activity_donation"
-            android:parentActivityName=".ScoutMainPage" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ScoutMainPage" />
+            android:label="@string/title_activity_donation">
         </activity>
         <activity
             android:name=".OrderFinalization"
-            android:label="@string/title_activity_order_finalization"
-            android:parentActivityName=".CustomerInfo" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".CustomerInfo" />
-        </activity>
-        <activity
-            android:name=".SalesPage2"
-            android:label="@string/title_activity_sales_page2"
-            android:parentActivityName=".SalesMode" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".SalesMode" />
+            android:label="@string/title_activity_order_finalization">
         </activity>
         <activity
             android:name=".AdminFunctions"
-            android:label="@string/title_activity_admin_functions"
-            android:parentActivityName=".DenLeaderMain" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mis478.popcornapp.DenLeaderMain" />
+            android:label="@string/title_activity_admin_functions">
         </activity>
         <activity
             android:name=".AddScout"
-            android:label="@string/title_activity_add_scout"
-            android:parentActivityName=".AdminFunctions" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mis478.popcornapp.AdminFunctions" />
+            android:label="@string/title_activity_add_scout">
         </activity>
         <activity
             android:name=".AddProduct"
-            android:label="@string/title_activity_add_product"
-            android:parentActivityName=".AdminFunctions" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mis478.popcornapp.AdminFunctions" />
+            android:label="@string/title_activity_add_product">
         </activity>
         <activity
             android:name=".DenGoal"
-            android:label="@string/title_activity_den_goal"
-            android:parentActivityName=".DenLeaderMain" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mis478.popcornapp.DenLeaderMain" />
+            android:label="@string/title_activity_den_goal">
         </activity>
         <activity
             android:name=".SellProducts"
-            android:label="@string/title_activity_sale_products"
-            android:parentActivityName=".ScoutMainPage" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mis478.popcornapp.ScoutMainPage" />
+            android:label="@string/title_activity_sale_products">
         </activity>
     </application>
 
