--- a/PopcornApp/app/src/main/AndroidManifest.xml
+++ b/PopcornApp/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mis478.popcornapp"
-    android:versionCode="22"
-    android:versionName="0.6" >
+    android:versionCode="23"
+    android:versionName="0.6 Presentation" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
