--- a/PopcornApp/app/build.gradle
+++ b/PopcornApp/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.mis478.popcornapp"
+        applicationId "com.mis478.popcornapp2"
         minSdkVersion 14
         targetSdkVersion 21
         //versionCode 2
